# VoxelGame

./: .gitignore  .gitmodules  LICENSE  README.md  readme.md
sourcecode/: SConstruct  linuxCompileCPPBindings  linuxCompileLibrary  windowsCompileCPPBindings.bat  windowsCompileLibrary.bat
sourcecode/VoxelGame/: Game.gd  Game.tscn  icon.png.import  networkedPlayers.gd  project.godot  skin.png.import  world.tscn
sourcecode/VoxelGame/assets/: blocks.json  exactly_one_pixel.png.import  icon.png.import
sourcecode/VoxelGame/beforeLoad/: BeforeLoad.gd  BeforeLoad.tscn
sourcecode/VoxelGame/bins/: chunkclient.gdnlib  libChunkGeneration.exp  libChunkGeneration.gdnlib  libChunkGeneration.lib
sourcecode/VoxelGame/gameinfo/: skin.png.import
sourcecode/VoxelGame/objects/: WorldLights.tscn
sourcecode/VoxelGameServer/: project.godot
sourcecode/chunk/: Cargo.toml  build.py
sourcecode/chunk/common/: Cargo.toml
sourcecode/chunk/common/src/: block.rs  chunk.rs  constants.rs  errors.rs  lib.rs  macros.rs  network.rs  positions.rs  prelude.rs
sourcecode/chunk/common/src/chunkmesh/: material.rs  mod.rs  nodes.rs  raw_mesh.rs
sourcecode/chunkgen/: Cargo.toml  build.py  buildLinuxRelease  buildWindowsDll.bat  buildWindowsRelease.bat
sourcecode/core/: SConstruct
sourcecode/core/src/: chunk.h  (+14 more)
sourcecode/src/: blockData.cpp  blockData.h  chunk.cpp  chunk.h  godotLibrary.cpp  worldGeneration.cpp  worldGeneration.h
sourcecode/voxelgame/: project.godot  world.tscn
sourceresources/playermodel/: playermodel.blend  playermodel.blend1
sourceresources/world/: textures.xcf
(+223 files in other folders)
