[package]
name = "chunkcommon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.10"
lazy_static = "1.4.0"
ndarray = { version = "0.15.4", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[lib]
crate-type = ["rlib"]
